crates/ridge-parser/tests/fixtures/errors/p021_inline_record_in_fn_param.ridge
-- expect: P021
-- Trigger: inline record type body as the annotation on a fn parameter.
pub fn id (x: { id: Int }) -> Int = 0
